--- a/asq_app/views/partials/login.html
+++ b/asq_app/views/partials/login.html
@@ -1,20 +1,4 @@
-<!--<head>-->
-
-    <!--<meta charset="utf-8">-->
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-
-    <!--<title>ASQ | Login</title>-->
-
-    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
-    <!--<link href="font-awesome/css/font-awesome.css" rel="stylesheet">-->
-
-    <!--<link href="css/animate.css" rel="stylesheet">-->
-    <!--<link href="css/style.css" rel="stylesheet">-->
-
-    <!--&lt;!&ndash; Favicon &ndash;&gt;-->
-    <!--<link rel="shortcut icon" href="img/favicon/bb.png">-->
-<!--</head>-->
-
+<!--Modified by Ayesha Taqdees for ASQ 3.0-->
 <ng-form name="loginForm">
 <div class="middle-box text-center loginscreen  animated fadeInDown" style="padding-top:0px;">
     <div>
