--- a/asq_app/views/partials/admin.html
+++ b/asq_app/views/partials/admin.html
@@ -1,43 +1,31 @@
+	<!--Modified by Ayesha Taqdees for ASQ 3.0--> 
 <div class="animated fadeInDown">
 	<!-- Header -->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-4">
-					<div class="logo">
-						<h1><a href="/home">Big Bang <span class="color">ASQ</span></a></h1>
-						<div class="hmeta">Perfect CSQE Virtual Exam & Practice Website</div>
-					</div>
-				</div>
-				<div style="text-align: right" class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-2">
+	<div ng-include="'partials/header.html'"></div>
 
-					<br>
-					<h4>Welcome, {{currentUser.firstName}},{{currentUser.lastName}}</h4>
-					<span class="color customLink"><a href="/home">Home</a></span> |
-					<span class="color customLink"><a href="/profile">Profile</a></span> |
-					<span class="color customLink"><a href="/changePassword">Change Password</a></span> |
-					<span class="color customLink"><a href="" ng-click="logout()">Logout</a></span>
-				</div>
-			</div>
-		</div>
-	</header>
 
+	
 	<div class="content">
-		<div class="container">
+		<div class="container" style="text-align: center;">
 			<!-- Content -->
-			<hr>
-			<div style="text-align: center">
-				<br><br><br>
-				<a href="/userInfo"><button class="btn btn-info customBtn" style="width: 250px;"><span class="customSpan">User Management</span></button></a>
-				<br><br><br>
-				<a href="/questionInfo"><button class="btn btn-info customBtn" style="width: 250px;"><span class="customSpan">Question Management</span></button></a>
-				<br><br><br>
-				<a href="/examInfo"><button class="btn btn-info customBtn" style="width: 250px;"><span class="customSpan">Exam Management</span></button></a>
-				<br><br><br>
+			<h3 class="greeting">Administrator! </h3>
+			
+			<div class="row actions">
+				<div class="col-md-4">
+					<a href="/userInfo"><button class="btn tile tile-blue"><span class="customSpan">
+					<i class="fa fa-users"></i> User Management</span></button></a>
+				</div>
+				<div class="col-md-4">
+					<a href="/questionInfo"><button class="btn tile tile-purple"><span class="customSpan">
+					<i class="fa fa-question-circle"></i> Question Management</span></button></a>
+				</div>
+				<div class="col-md-4">
+					<a href="/examInfo"><button class="btn tile tile-yellow"><span class="customSpan">
+					<i class="fa fa-graduation-cap"></i> Exam Management</span></button></a>
+				</div>
 			</div>
 			<hr>
 		</div>
-	</div>
 	
 	<!-- Footer -->
 	<footer>
