--- a/asq_app/views/partials/examInfoList.html
+++ b/asq_app/views/partials/examInfoList.html
@@ -1,33 +1,14 @@
 <div class="animated fadeInDown">
+	<!--Modified by Ayesha Taqdees for ASQ 3.0-->
+<div ng-include="'partials/header.html'"></div>
 	<!-- Header -->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-4">
-					<div class="logo">
-						<h1><a href="/home">Big Bang <span class="color">ASQ</span></a></h1>
-						<div class="hmeta">Perfect CSQE Virtual Exam & Practice Website</div>
-					</div>
-				</div>
-				<div style="text-align: right" class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-2">
-
-					<br>
-					<h4>Welcome, {{currentUser.firstName}},{{currentUser.lastName}}</h4>
-					<span class="color customLink"><a href="/home">Home</a></span> |
-					<span class="color customLink" ng-if="currentUser.role=='admin'"><a href="/admin">Admin</a> |</span>
-					<span class="color customLink"><a href="/profile">Profile</a></span> |
-					<span class="color customLink"><a href="/changePassword">Change Password</a></span> |
-					<span class="color customLink"><a href="" ng-click="logout()">Logout</a></span>
-				</div>
-			</div>
-		</div>
-	</header>
+	
 	
 	<ng-form name="examInfoList">
 		<div class="container">
 			<!-- Content -->
-			<hr>
 			<h3>Exam List Screen:</h3>
+			<hr>
 			<div class="form-group">
 			<br>
 			<div  style="border:2px solid #5BC0DE;width:950px;" data-ng-init="getCerts()">
