--- a/asq_app/views/partials/historyDetail.html
+++ b/asq_app/views/partials/historyDetail.html
@@ -1,77 +1,147 @@
-
+<!--Modified by Ayesha Taqdees for ASQ 3.0-->
 <!--<span>{{report}}</span>-->
 
 <a ng-click="gototop()" style="z-index: 9999; position: fixed; right: 50px; bottom: 50px;"><span class="glyphicon glyphicon-arrow-up"></span>  Top</a>
 <div class="animated fadeInDown">
-    <!-- Header -->
-    <header>	
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-4">
-                    <div class="logo">
-                        <h1><a id="top" href="/home">Big Bang <span class="color">ASQ</span></a></h1>
-                        <div class="hmeta">Perfect CSQE Virtual Exam & Practice Website</div>
-                    </div>
-                </div>
-                <div style="text-align: right" class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-2">
-
-                    <br>
-                    <!-- Modified for ASQ Upgrade 2.0.Added last name for welcome message. -->
-					<h4>Welcome, {{currentUser.firstName}} {{currentUser.lastName}}</h4>
-					<!-- Updated by Srinivas Thungathurti for deleting the duplicate link on history detail screen -->
-					<!-- <span class="color customLink"><a href="/history">History</a></span> | -->
-                    <span class="color customLink"><a href="/home">Home</a></span> |
-                    <!-- Updated by Srinivas Thungathurti for ASQ Upgrade 2.0. Added Admin link on Home screen. -->
-					<span class="color customLink" ng-if="currentUser.role=='admin'"><a href="/admin">Admin</a> |</span>
-					<!-- Added by Srinivas Thungathurti for ASQ Upgrade 2.0.New screen Change Password added. -->
-					<span class="color customLink"><a href="/profile">Profile</a></span> |
-					<span class="color customLink"><a href="/changePassword">Change Password</a></span> |
-					<!-- End changes for ASQ Upgrade 2.0. -->
-                    <span class="color customLink"><a href="" ng-click="logout()">Logout</a></span>
-
-                </div>
-            </div>
-        </div>
-    </header>
+      <!-- Header -->
+    <div ng-include="'partials/header.html'"></div>
+  
+  
 
 
 
     <div class="content" data-ng-init="init(numbers)">
         <div class="container">
             <!-- Content -->
-            <hr>
-            <br>
-            <!-- Added for ASQ Upgrade2.0.Added button to show the history details with Progress Bar. -->
-            <button  style="float: right" class="btn btn-info" ng-click="detailProgress(historyDetail[0].date)">
-                <span class="glyphicon glyphicon-eye-open"></span>  View Details
-            </button>
-            <a href="/history"><button style="float: right;margin:0px 30px 50px 20px;" class="btn btn-info" ng-click="submit()">
-                <span class="glyphicon glyphicon-search"></span>  View History
-            </button></a>
-            <a href="#changeHstr" data-toggle="modal" data-backdrop="true"><button style="float: right;margin:0px 10px 50px 20px;" class="btn btn-success">
-                <span class="glyphicon glyphicon-eye-open"></span>  Chart Settings
-            </button></a>
-            <div>
-                <h3 style="display: inline;">Your score is {{historyDetail[0].score}}! ({{historyDetail[0].total - historyDetail[0].report.wrong.length}}/{{historyDetail[0].total}})</h3>
-                <!-- <meter style="height: 20px; width: 200px; margin: 0 30px" low="60" high="80" max="100" optimum="100" value="{{historyDetail[0].score}}">{{historyDetail[0].score}}</meter> -->
-            </div>
-            <div style="align:center;" ng-if="historyDetail[0].mode == 'Practice'">
-                <br/>
-    			<highchart config="practiseChartConfig" style="width:60%;height:50%;border:2px solid #5BC0DE"></highchart>
-    			<br/>
-			</div>
-			<div style="align:center" ng-if="historyDetail[0].mode == 'Exam'">
-    			<br/>
-    			<highchart config="quizChartConfig" style="width:60%;height:50%;border:2px solid #5BC0DE"></highchart>
-    			<br/>
-			</div>
-            <button class="btn btn-info" ng-show="vis" ng-click="review()">Wrong Answers Review</button>
-            <button class="btn btn-info" ng-show="invis" ng-click="hide()">Hide Questions</button>
 
-            <br><br>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 style="display: inline;">Your score is {{historyDetail[0].score}}! ({{historyDetail[0].total - historyDetail[0].report.wrong.length}}/{{historyDetail[0].total}})</h3>
+                    <meter style="height: 20px; width: 200px; margin: 0 30px" low="60" high="80" max="100" optimum="100" value="{{historyDetail[0].score}}">{{historyDetail[0].score}}</meter>
+                </div>
+                <div class="col-md-6">
+                    <!-- Added for ASQ Upgrade2.0.Added button to show the history details with Progress Bar. -->
+                    <button style="float: right;margin-left:5px;" class="btn btn-info" ng-click="toggleView()">
+                        <span ng-show="viewType=='Chart'">Table View</span>
+                        <span ng-show="viewType=='Table'">Chart View</span>                      
+                    </button>
+
+                    <a href="#changeHstr" ng-show="viewType=='Chart'" style="float: right;margin-left:5px;" class="btn btn-success" data-toggle="modal"
+                    data-backdrop="true">
+                    Chart Settings
+                    </a>
+                    <a href="/history" style="float: right;margin-left:5px;" class="btn btn-info" ng-click="submit()">
+                     Back to History
+                    </a>
+                </div>
+
+            </div>
+            <hr>
+
+
+
+
+
+            <!--============exam table=========-->
+            <table ng-show="viewType=='Table'" class="table table-striped" style="font-size: 16px; margin: 50px 0;">
+                <thead>
+                    <tr>
+                        <th colspan="4">Sub scores in each category:</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-if="historyDetail[0].gkNumber">
+                        <td>Software General Knowledge</td>
+                        <td>{{historyDetail[0].gkNumber - historyDetail[0].gkWrong}}/{{historyDetail[0].gkNumber}}</td>
+                        <td>{{historyDetail[0].report.gkScore}}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.gkScore}}">{{historyDetail[0].report.gkScore}}</meter>
+                        </td>
+                    </tr>
+                    <tr ng-if="historyDetail[0].epNumber">
+                        <td>Software Engineering Processes</td>
+                        <td>{{historyDetail[0].epNumber - historyDetail[0].epWrong}}/{{historyDetail[0].epNumber}}</td>
+                        <td>{{historyDetail[0].report.epScore }}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.epScore }}">{{historyDetail[0].report.epScore }}</meter>
+                        </td>
+                    </tr>
+                    <tr ng-if="historyDetail[0].maNumber">
+                        <td>Software Metrics & Analysis</td>
+                        <td>{{historyDetail[0].maNumber - historyDetail[0].maWrong}}/{{historyDetail[0].maNumber}}</td>
+                        <td>{{historyDetail[0].report.maScore }}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.maScore }}">{{historyDetail[0].report.maScore }}</meter>
+                        </td>
+                    </tr>
+                    <tr ng-if="historyDetail[0].pmNumber">
+                        <td>Software Project Management</td>
+                        <td>{{historyDetail[0].pmNumber - historyDetail[0].pmWrong}}/{{historyDetail[0].pmNumber}}</td>
+                        <td>{{historyDetail[0].report.pmScore }}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.pmScore }}">{{historyDetail[0].report.pmScore }}</meter>
+                        </td>
+                    </tr>
+                    <tr ng-if="historyDetail[0].scmNumber">
+                        <td>Software Configuration Management</td>
+                        <td>{{historyDetail[0].scmNumber - historyDetail[0].scmWrong}}/{{historyDetail[0].scmNumber}}</td>
+                        <td>{{historyDetail[0].report.scmScore }}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.scmScore }}">{{historyDetail[0].report.scmScore }}</meter>
+                        </td>
+                    </tr>
+                    <tr ng-if="historyDetail[0].sqmNumber">
+                        <td>Software Quality Management</td>
+                        <td>{{historyDetail[0].sqmNumber - historyDetail[0].sqmWrong}}/{{historyDetail[0].sqmNumber}}</td>
+                        <td>{{historyDetail[0].report.sqmScore}}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.sqmScore}}">{{historyDetail[0].report.sqmScore}}</meter>
+                        </td>
+                    </tr>
+                    <tr ng-if="historyDetail[0].svvNumber">
+                        <td>Software Verification & Validation</td>
+                        <td>{{historyDetail[0].svvNumber - historyDetail[0].svvWrong}}/{{historyDetail[0].svvNumber}}</td>
+                        <td>{{historyDetail[0].report.svvScore}}%</td>
+                        <td>
+                            <meter style="height: 18px; width: 160px; margin: 0 30px" low="60" high="80" max="100" optimum="100"
+                            value="{{historyDetail[0].report.svvScore}}">{{historyDetail[0].report.svvScore}}</meter>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
+
+
+
+
+
+            <div style="align:center;" ng-show="viewType=='Chart'" ng-if="historyDetail[0].mode == 'Practice'">
+                <br/>
+                <highchart config="practiseChartConfig" class="chart-container"></highchart>
+                <br/>
+            </div>
+            <div style="align:center" ng-show="viewType=='Chart'" ng-if="historyDetail[0].mode == 'Exam'">
+                <br/>
+                <highchart config="quizChartConfig" class="chart-container"></highchart>
+                <br/>
+            </div>
+            <div class="center">
+                <button class="btn btn-info" ng-show="vis" ng-click="review()">Wrong Answers Review</button>
+                <button class="btn btn-info" ng-show="invis" ng-click="hide()">Hide Questions</button>
+            </div>
+            <br>
+            <br>
             <!-- Modified for ASQ Upgrade2.0.Border color has been changed inline with ASQ Application color pattern. -->
             <!-- <section ng-if="showReview" style="color: navy; padding: 20px; border: 2px silver solid;"> -->
-            	<section ng-if="showReview" style="color: navy; padding: 20px; border:2px solid #5BC0DE;">
+            <section ng-if="showReview" style="color: navy; padding: 20px; border:2px solid #5BC0DE;">
                 <div ng-repeat="item in historyDetail[0].report.wrong" style="font-size: 17px; margin: 25px;">
                     <h4 style="color: black; font-weight: bold">Question: {{item.content}}</h4>
                     <div style="margin: 18px 10px; text-indent: 10px;">
@@ -89,37 +159,39 @@
             <br>
             <hr>
         </div>
-    
-    
-    <div  class="modal fade" id="changeHstr" role="dialogue" style="z-index:0">
-	<div class="modal-dialogue" style="padding-top:180px; padding-left:320px; padding-right:320px;">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4>Change Progress Chart Setting</h4>
-			</div>
-			<div class="modal-body" style="display:block;">
-			<!-- Popup Div Starts Here -->
-				<label for="settings"><strong>Number of historical scores on progress chart</strong><br>
-				<select ng-model="numbers" style="width:80px;" convert-to-number>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
-					<option value="6">6</option>
-					<option value="7">7</option>
-					<option value="8">8</option>
-					<option value="9">9</option>
-					<option value="10">10</option>
-				</select><br>
-				
-			</div>
-			<div class="modal-footer">
-				<button class="btn btn-success" data-dismiss="modal" ng-click="init(numbers)" style="margin-right:270px">Save</button>
-			</div>
-		</div>
-	</div>
-</div>
-</div>
+
+
+        <div class="modal fade" id="changeHstr" role="dialogue" style="z-index:0">
+            <div class="modal-dialogue" style="padding-top:180px; padding-left:320px; padding-right:320px;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4>Change Progress Chart Setting</h4>
+                    </div>
+                    <div class="modal-body" style="display:block;">
+                        <!-- Popup Div Starts Here -->
+                        <label for="settings"><strong>Number of historical scores on progress chart</strong>
+                            <br>
+                            <select ng-model="numbers" style="width:80px;" convert-to-number>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                            </select>
+                            <br>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success" data-dismiss="modal" ng-click="init(numbers)" style="margin-right:270px">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -131,7 +203,7 @@
                     <div style="text-align: center" class="copy">
                         <h5>ASQ CSQE Virtual Exam & Practice</h5>
                         <p>&copy; <a href="/about">2015 Big Bang ASQ Exam</a></p>
-                        <p>Questions Provided by <a href="http://www.qualitycouncil.com/CSQE.html" target="_blank">Quality Council of Indiana</a> and by <a href="http://www.westfallteam.com/quiz_listing" target="_blank">Linda Westfall</a></p>
+                        <p>Questions Provided by <a href="http://www.qualitycouncil.com/CSQE.html" target="_blank">Quality Council of Indiana</a>                            and by <a href="http://www.westfallteam.com/quiz_listing" target="_blank">Linda Westfall</a></p>
                     </div>
                 </div>
             </div>
