--- a/asq_app/views/partials/home.html
+++ b/asq_app/views/partials/home.html
@@ -1,48 +1,28 @@
-<div class="animated fadeInUp">
-	<!-- Header -->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-4">
-					<div class="logo">
-						<h1><a href="#">Big Bang <span class="color">ASQ</span></a></h1>
-						<div class="hmeta">Perfect CSQE Virtual Exam & Practice Website</div>
-					</div>
-				</div>
-				<div style="text-align: right" class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-2">
-
-					<br>
-					<h4>Welcome, {{currentUser.firstName}},{{currentUser.lastName}}</h4>
-					<!-- Updated by Srinivas Thungathurti for ASQ Upgrade 2.0. Added Admin link on Home screen. -->
-					<span class="color customLink" ng-if="currentUser.role=='admin'"><a href="/admin">Admin</a> |</span>
-					<!-- End changes for ASQ Upgrade 2.0. -->
-					<span class="color customLink"><a href="/profile">Profile</a></span> |
-					<!-- Added by Srinivas Thungathurti for ASQ Upgrade 2.0.New screen Change Password added. -->
-					<span class="color customLink"><a href="/changePassword">Change Password</a></span> |
-					<span class="color customLink"><a href="" ng-click="logout()">Logout</a></span>
-
-				</div>
-			</div>
-		</div>
-	</header>
-	
+<!-- 
+ @date : 03/15/2016
+ @author : Ayesha Taqdees
+ @description : Created for ASQ 3.0 
+ -->
+<div ng-include="'partials/header.html'"></div>
+<div class="animated fadeInUp">	
 	<div class="content">
-		<div class="container">
+		<div class="container" style="text-align: center;">
 			<!-- Content -->
-			<hr>
-			<div style="text-align: center">
-				<br><br><br>
-				<!-- <button ng-click="exam()" class="btn btn-info customBtn"><span class="customSpan">Exam</span></button> -->
-				<a href="/examInfoList"><button class="btn btn-info customBtn"><span class="customSpan">Exam</span></button></a>
-				<br><br><br>
-				<a href="/practise"><button class="btn btn-info customBtn"><span class="customSpan">Practice</span></button></a>
-				<br><br><br>
-				<a href="/history"><button class="btn btn-info customBtn"><span class="customSpan">History</span></button></a>
-				<br><br><br>
-				<!-- 
-				<a href="/testDynamic"><button class="btn btn-info customBtn"><span class="customSpan">Test</span></button></a>
-				<br><br><br>
-				 -->
+			<h3 class="greeting">Welcome {{currentUser.firstName}} {{currentUser.lastName}}! </h3>
+			
+			<div class="row actions">
+				<div class="col-md-4">
+					<a href="/examInfoList"><button class="btn tile tile-blue"><span class="customSpan">
+					<i class="fa fa-graduation-cap"></i> Exam</span></button></a>
+				</div>
+				<div class="col-md-4">
+					<a href="/practise"><button class="btn tile tile-purple"><span class="customSpan">
+					<i class="fa fa-pencil"></i> Practice</span></button></a>
+				</div>
+				<div class="col-md-4">
+					<a href="/history"><button class="btn tile tile-yellow"><span class="customSpan">
+					<i class="fa fa-history"></i> History</span></button></a>
+				</div>
 			</div>
 			<hr>
 		</div>
