--- a/asq_app/views/partials/practiseConf.html
+++ b/asq_app/views/partials/practiseConf.html
@@ -1,37 +1,16 @@
 <div class="animated fadeInDown">
+    <!--Modified by Ayesha Taqdees for ASQ 3.0-->
+    <div ng-include="'partials/header.html'"></div>
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-4">
-                    <div class="logo">
-                        <h1><a href="/home">Big Bang <span class="color">ASQ</span></a></h1>
-                        <div class="hmeta">Perfect CSQE Virtual Exam & Practice Website</div>
-                    </div>
-                </div>
-                <div style="text-align: right" class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-2">
-
-                    <br>
-                    <!-- Modified for ASQ Upgrade 2.0.Added last name for welcome message. -->
-					<h4>Welcome, {{currentUser.firstName}},{{currentUser.lastName}}</h4>
-                    <span class="color customLink"><a href="/home">Home</a></span> |
-                    <!-- Modified by Srinivas Thungathurti for ASQ Upgrade 2.0. Added Admin link on Home screen. -->
-					<span class="color customLink" ng-if="currentUser.role=='admin'"><a href="/admin">Admin</a> |</span>
-					<span class="color customLink"><a href="/profile">Profile</a></span> |
-					<span class="color customLink"><a href="/changePassword">Change Password</a></span> |
-					<!-- End changes for ASQ Upgrade 2.0. -->
-                    <span class="color customLink"><a href="" ng-click="logout()">Logout</a></span>
-
-                </div>
-            </div>
-        </div>
-    </header>
-
+  
+    
     <div class="content">
         <div class="container">
             <!-- Content -->
+            <h3 class="page-title">Practice</h3>
+
             <hr>
-            <table class="table table-striped" style="font-size: 16px; margin: 10px 0;">
+            <table class="table table-hover" style="font-size: 16px; margin: 10px 0;">
                 <thead>
                 <tr>
                     <th colspan="3" style="padding: 15px 0; font-size: 18px;">SELECT Categories and SET Number of Questions for Your CSQE Practice</th>
